fixed issue of justified text having spacing

--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ color: crimson;
     justify-content: center;
     padding: 0px 30px;
     text-align: justify;
+    letter-spacing: -2px;
 }
 
 .aboutHeader {
